<!--
  ~ Copyright (c) 2020, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
  ~
  ~ WSO2 Inc. licenses this file to you under the Apache License,
  ~ Version 2.0 (the "License"); you may not use this file except
  ~ in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied. See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.wso2.integrationstudio</groupId>
    <artifactId>wso2-integration-studio-parent</artifactId>
    <version>8.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>WSO2 Integration Studio - Parent</name>
    <description>WSO2 Integration Studio</description>

    <scm>
        <connection>scm:git:https://github.com/wso2/integration-studio.git</connection>
        <developerConnection>scm:git:https://github.com/wso2/integration-studio.git</developerConnection>
        <url>https://github.com/wso2/integration-studio.git</url>
    </scm>

    <distributionManagement>
        <repository>
            <id>nexus-releases</id>
            <name>WSO2 Release Distribution Repository</name>
            <url>https://maven.wso2.org/nexus/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <profiles>
        <profile>
            <id>all-components</id>
            <modules>
                <module>components/studio-platform</module>
                <module>components/server-tools</module>
                <module>components/esb-tools</module>
                <module>components/dss-tools</module>
            </modules>
        </profile>
        <profile>
            <id>studio-platform</id>
            <modules>
                <module>components/studio-platform</module>
            </modules>
        </profile>
        <profile>
            <id>esb-tools</id>
            <modules>
                <module>components/studio-platform</module>
                <module>components/server-tools</module>
                <module>components/dss-tools</module>
                <module>components/esb-tools</module>
            </modules>
        </profile>
        <profile>
            <id>dss-tools</id>
            <modules>
                <module>components/studio-platform</module>
                <module>components/dss-tools</module>
            </modules>
        </profile>
        <profile>
            <id>server-tools</id>
            <modules>
                <module>components/studio-platform</module>
                <module>components/server-tools</module>
            </modules>
        </profile>
        <profile>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>components</module>
                <module>distribution</module>
            </modules>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${com.google.code.gson}</version>
            </dependency>
            <dependency>
                <groupId>commons-io.wso2</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.wso2}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.ws.commons.axiom.wso2</groupId>
                <artifactId>axiom</artifactId>
                <version>${org.apache.ws.commons.axiom.wso2}</version>
            </dependency>
            <dependency>
                <groupId>wsdl4j.wso2</groupId>
                <artifactId>wsdl4j</artifactId>
                <version>${wsdl4j.wso2}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.axis2.wso2</groupId>
                <artifactId>axis2</artifactId>
                <version>${org.apache.axis2.wso2}</version>
            </dependency>
            <dependency>
                <groupId>commons-validator</groupId>
                <artifactId>commons-validator</artifactId>
                <version>${commons.validator}</version>
            </dependency>
            <dependency>
                <groupId>commons-httpclient.wso2</groupId>
                <artifactId>commons-httpclient</artifactId>
                <version>${commons.httpclient.wso2}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-server</artifactId>
                <version>${org.eclipse.jetty.server}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-servlet</artifactId>
                <version>${org.eclipse.jetty.servlet}</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.jettison.wso2</groupId>
                <artifactId>jettison</artifactId>
                <version>${org.codehaus.jettison.wso2}</version>
            </dependency>
            <dependency>
                <groupId>xmlunit</groupId>
                <artifactId>xmlunit</artifactId>
                <version>${xmlunit}</version>
            </dependency>   
            <dependency>
                <groupId>org.apache.xalan</groupId>
                <artifactId>xalan</artifactId>
                <version>${org.apache.xalan}</version>
            </dependency>  
            <dependency>
                <groupId>wsdl4j</groupId>
                <artifactId>wsdl4j</artifactId>
                <version>${wsdl4j}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.tomcat</groupId>
                <artifactId>tribes</artifactId>
                <version>${org.apache.tomcat.tribes}</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.woodstox</groupId>
                <artifactId>wstx-asl</artifactId>
                <version>${org.codehaus.woodstox.wstx.asl}</version>
            </dependency>
            <dependency>
                <groupId>javax.xml.stream</groupId>
                <artifactId>stax-api</artifactId>
                <version>${javax.xml.stream.stax.api}</version>
            </dependency> 
            <dependency>
                <groupId>org.codehaus.jettison</groupId>
                <artifactId>jettison</artifactId>
                <version>${org.codehaus.jettison}</version>
            </dependency>
            <dependency>
                <groupId>org.activiti.designer</groupId>
                <artifactId>org.activiti.designer.integration</artifactId>
                <version>${activti.designer.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <properties>
        <eclipse.platform.url>https://download.eclipse.org/releases/2021-12/</eclipse.platform.url>
        <wso2.maven.repository.url>https://maven.wso2.org/nexus/content/groups/wso2-public/</wso2.maven.repository.url>
        <wso2.nexus.repository>http://maven.wso2.org/nexus/content/groups/wso2-public/</wso2.nexus.repository>
        <wso2.nexus.snapshot.repository>https://maven.wso2.org/nexus/content/repositories/wso2.maven2.snapshot/</wso2.nexus.snapshot.repository>
        <eclipse.older.plugins.repository>https://product-dist.wso2.com/p2/developer-studio-kernel/dependencies/eclipse/oxygen/p2/</eclipse.older.plugins.repository>
        <activiti.releases.repository>http://www.activiti.org/designer/update/</activiti.releases.repository>
        <activiti.alfresco.repository>https://maven.alfresco.com/nexus/content/groups/public/</activiti.alfresco.repository>
        <wso2.http4e.p2.repository>https://product-dist.wso2.com/p2/developer-studio-kernel/dependencies/Http4e/</wso2.http4e.p2.repository>
        <maven.compiler.plugin>3.1</maven.compiler.plugin>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.release.plugin>2.3.2</maven.release.plugin>
        <maven.dependency.plugin>2.1</maven.dependency.plugin>
        <maven.eclipse.plugin>2.10</maven.eclipse.plugin>
        <maven.clean.plugin>2.5</maven.clean.plugin>
        <maven.resources.plugin>2.7</maven.resources.plugin>
        <maven.install.plugin>2.3.1</maven.install.plugin>
        <maven.deploy.plugin>2.5</maven.deploy.plugin>
        <maven.jar.plugin>2.3.1</maven.jar.plugin>
        <maven.download.plugin>1.3.0</maven.download.plugin>
        <com.coderplus.maven.copy.rename.plugin>1.0</com.coderplus.maven.copy.rename.plugin>
        <com.google.code.gson>2.3.1</com.google.code.gson>
        <commons-io.wso2>2.0.0.wso2v1</commons-io.wso2>
        <org.apache.maven.assembly.plugins>2.2-beta-2</org.apache.maven.assembly.plugins>
        <org.apache.ws.commons.axiom.wso2>1.2.11.wso2v10</org.apache.ws.commons.axiom.wso2>
        <wsdl4j.wso2>1.6.2.wso2v4</wsdl4j.wso2>
        <org.apache.axis2.wso2>1.6.1.wso2v14</org.apache.axis2.wso2>
        <commons.validator>1.4.0</commons.validator>
        <commons.httpclient.wso2>3.1.0.wso2v2</commons.httpclient.wso2>
        <org.codehaus.mojo.buildnumber.maven.plugin>1.2</org.codehaus.mojo.buildnumber.maven.plugin>
        <org.codehaus.mojo.exec.maven.plugin>1.6.0</org.codehaus.mojo.exec.maven.plugin>
        <org.eclipse.jetty.server>9.4.14.v20181114</org.eclipse.jetty.server>
        <org.eclipse.jetty.servlet>9.4.14.v20181114</org.eclipse.jetty.servlet>
        <org.codehaus.jettison.wso2>1.3.4.wso2v1</org.codehaus.jettison.wso2>
        <org.apache.maven.jarsigner.plugin>1.2</org.apache.maven.jarsigner.plugin>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <tycho-version>1.3.0</tycho-version>
        <tycho-extras.version>1.3.0</tycho-extras.version>
        <version.mvn-resource-plugin>2.7</version.mvn-resource-plugin>
        <version.sortpom.plugin>2.3.0</version.sortpom.plugin>
        <org.apache.maven.wagon.ssh>2.1</org.apache.maven.wagon.ssh>
        <com.google.code.sortpom>2.3.0</com.google.code.sortpom>
        <xmlunit>1.1</xmlunit>
        <wsdl4j>1.6.2</wsdl4j>
        <org.apache.xalan>2.7.1</org.apache.xalan>
        <org.apache.tomcat.tribes>6.0.16</org.apache.tomcat.tribes>
        <org.codehaus.woodstox.wstx.asl>3.2.4</org.codehaus.woodstox.wstx.asl>
        <javax.xml.stream.stax.api>1.0-2</javax.xml.stream.stax.api>
        <org.codehaus.jettison>1.3.1</org.codehaus.jettison>
        <activti.designer.version>5.18.0</activti.designer.version>
        <mi.product.version>4.1.0</mi.product.version>
        <mi.product.directory>4.1.0</mi.product.directory>
        <mi.dashboard.version>4.1.0</mi.dashboard.version>
        <apache.maven.version>3.6.3</apache.maven.version>
        <version.sortpom.plugin>2.3.0</version.sortpom.plugin>
    </properties>

</project>
